[project]
name = ""
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.29.0",
    "yfinance>=0.2.35",
    "plotly>=5.18.0",
    "pandas>=2.1.4",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.3",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "scipy>=1.11.4",
    "scikit-learn",
    "google-generativeai",
    "anthropic>=0.5.0",
    "ollama>=0.1.0",
    "bs4",
    "duckduckgo-search",
    "fastapi>=0.100.0",
    #"pysqlite3-binary",
]

[tool.uv]
package = false
